feat: add complete Docker setup with multi-stage build
- Add Dockerfile with multi-stage build (JDK for build, JRE for runtime)
- Add app service to docker-compose.yml with DB dependency
- Add spring-boot-actuator for container health checks
- Add DB schema init script (01-schema.sql)
- Update application.properties with default values and actuator config
- Update .env.example with documentation

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
-# Database Configuration
-# Copy this file to .env and update values
+# ===================================================================
+# Environment Configuration for IV1201 Recruitment Application
+# ===================================================================
+# Copy this file to .env and adjust values as needed
+# ===================================================================
 
-# PostgreSQL connection
-DB_URL=jdbc:postgresql://localhost:5432/recruitment
+# Database Configuration
 DB_NAME=recruitment
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
-# For production, use strong passwords and consider:
-# - Using environment variables instead of .env
-# - Using a secrets manager
+# For local development (without Docker app container):
+# DB_URL=jdbc:postgresql://localhost:5432/recruitment
+
+# For Docker Compose (app container connects to db container):
+# DB_URL=jdbc:postgresql://db:5432/recruitment
