--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 # ===================================================================
 # Database Configuration
 # ===================================================================
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/recruitment}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===================================================================
@@ -34,3 +34,9 @@ server.port=8080
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===================================================================
+# Actuator Configuration (Health Checks for Docker)
+# ===================================================================
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=when_authorized
