fix: correct application-dev.properties for live CSS reload
Set spring.thymeleaf.prefix to single external directory. Live reload now works with docker-compose.dev.yml.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,8 @@
 
 # Disable Thymeleaf caching for live template reload
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=file:/app/templates/,classpath:/templates/
+spring.thymeleaf.prefix=file:/app/templates/
+spring.thymeleaf.check-template-location=false
 
 # Static resources - check external directory first, then classpath
 spring.web.resources.static-locations=file:/app/static/,classpath:/static/
@@ -20,3 +21,4 @@ server.error.include-stacktrace=on_param
 
 # More verbose logging for development
 logging.level.com.iv1201.recruitment=DEBUG
+logging.level.org.springframework.web=DEBUG
