Add CI/CD pipeline with unit testing, static analysis, and Azure deployment
Implements Task 17: CI/CD pipeline for testing, static analysis, and deployment

Changes:
- Add GitHub Actions workflow (.github/workflows/ci-cd.yml) with 4 jobs:
  1. Unit tests with H2 database, generates test and coverage reports
  2. Static analysis using Checkstyle (Google Java Style)
  3. Build Docker image and push to GitHub Container Registry (ghcr.io)
  4. Deploy to Azure Web App (App Service)

- Update pom.xml with plugins and dependencies:
  - Checkstyle plugin for code style analysis
  - JaCoCo plugin for code coverage reporting
  - Surefire report plugin for test result HTML reports
  - Flyway dependency for database migration management

- Add src/test/resources/application-test.properties:
  - H2 in-memory database configuration for tests
  - PostgreSQL compatibility mode
  - Enables tests to run without PostgreSQL (local + CI/CD)

- Add Flyway database migrations:
  - Moved SQL files from src/main/resources/db/ to db/migration/
  - Renamed to Flyway convention (V1__, V2__, V3__, V4__)
  - Migrations run automatically on app startup (local + Azure)
  - Updated docker-compose.yml to use Flyway instead of init scripts

Pipeline:
- Tests and static analysis run in parallel
- Docker build uses existing Dockerfile (multi-stage build with Maven)
- Pushes Docker image to GitHub Container Registry (free)
- Deploys to Azure Web App using official azure/webapps-deploy action
- Deployment only runs on push to main branch

Artifacts:
- Test reports, coverage reports, and Checkstyle results uploaded
- 30-day retention for evaluation

Aligned with ADL: Maven, JUnit 5, Azure, Docker, Java 21
Uses official GitHub Actions for Azure deployment
Follows GitHub's azure-container-webapp.yml template

Database Architecture Decision:
- Split architecture: Azure Web App (app) + Azure Database for PostgreSQL (db)
- Flyway handles migrations automatically in both environments
- Local development: docker

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,7 +14,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
-      - ./src/main/resources/db:/docker-entrypoint-initdb.d:ro
+      # Note: Database migrations are now handled by Flyway (automatic on app startup)
+      # Old init scripts have been moved to db/migration/ and run via Flyway
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-postgres} -d ${DB_NAME:-recruitment}"]
       interval: 10s
