--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,11 +116,12 @@ jobs:
           file: ./Dockerfile
 
   # Job 4: Deploy to Azure Web App
+  # remove 
   deploy:
     name: Deploy to Azure
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature/ci-cd-pipeline') && github.event_name == 'push'
     permissions:
       contents: none
     environment:
