Add integration tests for repositories and security

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,9 +4,13 @@
 # ===================================================================
 
 # ===================================================================
+# Flyway Configuration
+# ===================================================================
+spring.flyway.enabled=false
+
+# ===================================================================
 # H2 In-Memory Database Configuration
 # ===================================================================
-# Use H2 in-memory database for tests (fast, isolated, no setup required)
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -15,18 +19,14 @@ spring.datasource.password=
 # ===================================================================
 # JPA / Hibernate Configuration for Tests
 # ===================================================================
-# Use H2 dialect (with PostgreSQL compatibility mode)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# Create schema from entities, then validate
 spring.jpa.hibernate.ddl-auto=create-drop
-# Show SQL queries in console (useful for debugging tests)
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # ===================================================================
 # Logging Configuration for Tests
 # ===================================================================
-# Reduce logging noise during tests
 logging.level.org.springframework=WARN
 logging.level.org.hibernate=WARN
 logging.level.com.iv1201.recruitment=INFO
