added log file config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,19 @@ logging.level.com.iv1201.recruitment=DEBUG
 logging.level.org.springframework.web=INFO
 # Set to DEBUG if you want to see the SQL queries being executed
 logging.level.org.hibernate.sql=WARN
+
+# ===================================================================
+# Log File Configuration
+# ===================================================================
+# Write logs to file (also continues to write to console)
+logging.file.name=logs/recruitment-app.log
+# Rotate when file reaches 10MB
+logging.logback.rollingpolicy.max-file-size=10MB
+# Keep 30 days of history
+logging.logback.rollingpolicy.max-history=30
+# Total size cap for all archived logs
+logging.logback.rollingpolicy.total-size-cap=1GB
+
 # ===================================================================
 # Actuator Configuration (Health Checks for Docker)
 # ===================================================================
