--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ logging.level.org.hibernate.sql=WARN
 # ===================================================================
 # Log File Configuration
 # ===================================================================
-# Write logs to file (also continues to write to console)
+# Write logs to file 
 logging.file.name=logs/recruitment-app.log
 # Rotate when file reaches 10MB
 logging.logback.rollingpolicy.max-file-size=10MB
