Add example test file and simplify docker-compose
- Add ExampleTest.java with 4 example test methods for team reference
- Verify JUnit and test infrastructure works in CI/CD pipeline
- Simplify docker-compose.dev.yml usage comment

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,5 @@
 # Development docker-compose with live reload for static resources (CSS, JS, templates)
-# Usage: docker compose -f docker-compose.dev.yml up -d --build
+# Usage: docker compose -f docker-compose.dev.yml up
 
 services:
   db:
