--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -101,8 +101,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_3548D34497534A98817553B21495E73E }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_D55FB562196747BB8612603826A9E328 }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
 
       - name: Lowercase the repo name
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
