--- a/.github/workflows/main_iv1201-recruitment.yml
+++ b/.github/workflows/main_iv1201-recruitment.yml
@@ -1,7 +1,10 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
+#
+# Note: Docker image building is handled by ci-cd.yml workflow
+# This workflow only deploys the pre-built image to Azure
 
-name: Build and deploy container app to Azure Web App - iv1201-recruitment
+name: Deploy to Azure Web App
 
 on:
   push:
@@ -10,39 +13,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io/
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_3548D34497534A98817553B21495E73E }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_D55FB562196747BB8612603826A9E328 }}
-
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_3548D34497534A98817553B21495E73E }}/fractalfish/iv1201-project:${{ github.sha }}
-          file: ./Dockerfile
-
   deploy:
     runs-on: ubuntu-latest
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
-
-    needs: build
     
     steps:
       
@@ -59,5 +34,5 @@ jobs:
         with:
           app-name: 'iv1201-recruitment'
           slot-name: 'Production'
-          images: 'ghcr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_3548D34497534A98817553B21495E73E }}/fractalfish/iv1201-project:${{ github.sha }}'
+          images: 'ghcr.io/fractalfish/iv1201-project:${{ github.sha }}'
           
