fix Azure deployment workflow  permission for building
Updated deployment workflow to include necessary permissions for JWT requests and streamlined steps for clarity.

--- a/.github/workflows/main_iv1201-recruitment.yml
+++ b/.github/workflows/main_iv1201-recruitment.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
+      id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
 
     steps:
@@ -60,4 +61,5 @@ jobs:
           app-name: 'iv1201-recruitment'
           slot-name: 'Production'
           images: 'ghcr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_3548D34497534A98817553B21495E73E }}/fractalfish/iv1201-project:${{ github.sha }}'
+
           
