Fix YAML formatting
pesky extra ":"  removed

--- a/.github/workflows/main_iv1201-recruitment.yml
+++ b/.github/workflows/main_iv1201-recruitment.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
-      packages: : write #This is required for requesting the JWT
+      packages: write #This is required for requesting the JWT
 
     steps:
       - uses: actions/checkout@v4
@@ -63,4 +63,5 @@ jobs:
           images: 'ghcr.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_3548D34497534A98817553B21495E73E }}/fractalfish/iv1201-project:${{ github.sha }}'
 
           
+
 
