--- a/.github/workflows/main_iv1201-recruitment.yml
+++ b/.github/workflows/main_iv1201-recruitment.yml
@@ -1,10 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-#
-# Note: Docker image building is handled by ci-cd.yml workflow
-# This workflow only deploys the pre-built image to Azure
 
-name: Deploy to Azure Web App
+name: Build and deploy container app to Azure Web App - iv1201-recruitment
 
 on:
   push:
@@ -13,14 +10,121 @@ on:
   workflow_dispatch:
 
 jobs:
+  # Run tests first
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      
+      - name: Run unit tests
+        run: ./mvnw test -Dspring.profiles.active=test
+      
+      - name: Generate test report
+        run: ./mvnw surefire-report:report
+        if: always()
+      
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: |
+            target/surefire-reports/
+            target/site/surefire-report.html
+          retention-days: 30
+      
+      - name: Generate JaCoCo coverage report
+        run: ./mvnw jacoco:report
+        if: always()
+      
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-report
+          path: target/site/jacoco/
+          retention-days: 30
+
+  # Static analysis
+  static-analysis:
+    name: Static Analysis
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      
+      - name: Run Checkstyle
+        run: ./mvnw checkstyle:checkstyle
+        continue-on-error: true
+      
+      - name: Upload Checkstyle report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: checkstyle-report
+          path: target/checkstyle-result.xml
+          retention-days: 30
+          if-no-files-found: ignore
+
+  # Build only runs if tests pass
+  build:
+    runs-on: ubuntu-latest
+    needs: [test, static-analysis]
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Lowercase the repo name
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
+          file: ./Dockerfile
+
   deploy:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
+
+    needs: build
     
     steps:
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -35,4 +139,3 @@ jobs:
           app-name: 'iv1201-recruitment'
           slot-name: 'Production'
           images: 'ghcr.io/fractalfish/iv1201-project:${{ github.sha }}'
-          
