--- a/.github/workflows/main_iv1201-recruitment.yml
+++ b/.github/workflows/main_iv1201-recruitment.yml
@@ -123,14 +123,12 @@ jobs:
       
       - name: Wait for Selenium Grid to be ready
         run: |
-          echo "Waiting for Selenium Grid..."
-          sleep 10
-          for i in {1..30}; do
-            if curl -sSf http://localhost:4444/status > /dev/null 2>&1; then
-              echo "Chrome Selenium is ready"
+          for i in {1..10}; do
+            if curl -s http://localhost:4444/status | grep -q '"ready":true'; then
+              echo "Grid is ready"
               break
             fi
-            sleep 1
+            sleep 5
           done
       
       # Start application in background
@@ -140,7 +138,6 @@ jobs:
           export DB_USERNAME=postgres
           export DB_PASSWORD=postgres
           ./mvnw spring-boot:run &
-          echo "Waiting for application to start..."
           sleep 30
           for i in {1..30}; do
             if curl -sSf http://localhost:8080 > /dev/null 2>&1; then
