--- a/.github/workflows/main_iv1201-recruitment.yml
+++ b/.github/workflows/main_iv1201-recruitment.yml
@@ -89,9 +89,8 @@ jobs:
     name: Cross-Browser Testing
     runs-on: ubuntu-latest
     needs: test
-    
+
     services:
-      # PostgreSQL for the application
       postgres:
         image: postgres:16
         env:
@@ -105,7 +104,25 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-    
+
+      selenium-chrome:
+        image: selenium/standalone-chrome:latest
+        options: --add-host=host.docker.internal:host-gateway
+        ports:
+          - 4444:4444
+
+      selenium-firefox:
+        image: selenium/standalone-firefox:latest
+        options: --add-host=host.docker.internal:host-gateway
+        ports:
+          - 4445:4444
+
+      selenium-edge:
+        image: selenium/standalone-edge:latest
+        options: --add-host=host.docker.internal:host-gateway
+        ports:
+          - 4446:4444
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -116,22 +133,16 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
-      
-      # Start Selenium Grid containers
-      - name: Start Selenium Grid
-        run: docker-compose -f docker-compose.selenium.yml up -d
-      
-      - name: Wait for Selenium Grid to be ready
+
+      - name: Wait for Selenium to be ready
         run: |
-          for i in {1..10}; do
+          for i in {1..30}; do
             if curl -s http://localhost:4444/status | grep -q '"ready":true'; then
-              echo "Grid is ready"
               break
             fi
             sleep 5
           done
-      
-      # Start application in background
+
       - name: Start Spring Boot application
         run: |
           export DB_URL=jdbc:postgresql://localhost:5432/recruitment
@@ -141,23 +152,20 @@ jobs:
           sleep 30
           for i in {1..30}; do
             if curl -sSf http://localhost:8080 > /dev/null 2>&1; then
-              echo "Application is ready"
               break
             fi
             sleep 2
           done
-      
-      # Run cross-browser tests
+
       - name: Test on Chrome
-        run: ./mvnw test -Dtest=CrossBrowserTest -Dbrowser=chrome
-      
+        run: ./mvnw test -Dtest=CrossBrowserTest -Dbrowser=chrome -Dapp.url=http://host.docker.internal:8080 -Dsurefire.excludes=none
+
       - name: Test on Firefox
-        run: ./mvnw test -Dtest=CrossBrowserTest -Dbrowser=firefox
-      
+        run: ./mvnw test -Dtest=CrossBrowserTest -Dbrowser=firefox -Dapp.url=http://host.docker.internal:8080 -Dsurefire.excludes=none
+
       - name: Test on Edge
-        run: ./mvnw test -Dtest=CrossBrowserTest -Dbrowser=edge
-      
-      # Upload test results
+        run: ./mvnw test -Dtest=CrossBrowserTest -Dbrowser=edge -Dapp.url=http://host.docker.internal:8080 -Dsurefire.excludes=none
+
       - name: Upload browser test results
         uses: actions/upload-artifact@v4
         if: always()
@@ -165,11 +173,6 @@ jobs:
           name: cross-browser-test-results
           path: target/surefire-reports/
           retention-days: 30
-      
-      # Cleanup
-      - name: Stop Selenium Grid
-        if: always()
-        run: docker-compose -f docker-compose.selenium.yml down
 
   # Build only runs if tests pass
   build:
