--- a/docker-compose.selenium.yml
+++ b/docker-compose.selenium.yml
@@ -1,59 +1,37 @@
-version: '3.8'
-
 services:
-  # Selenium Grid Hub
-  selenium-hub:
-    image: selenium/hub:4.25.0
-    container_name: selenium-hub
+  # Standalone Chrome - accessible on port 4444
+  chrome:
+    image: selenium/standalone-chrome:4.27.0
+    container_name: selenium-chrome
+    shm_size: 2gb
     ports:
       - "4444:4444"
-      - "4442:4442"
-      - "4443:4443"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - test-network
 
-  # Chrome Node 
-  chrome:
-    image: selenium/node-chrome:4.25.0
-    container_name: selenium-chrome
-    depends_on:
-      - selenium-hub
-    shm_size: 2gb
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=5
-    networks:
-      - test-network
-
-  # Firefox Node
+  # Standalone Firefox - accessible on port 4445
   firefox:
-    image: selenium/node-firefox:4.25.0
+    image: selenium/standalone-firefox:4.27.0
     container_name: selenium-firefox
-    depends_on:
-      - selenium-hub
     shm_size: 2gb
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=5
+    ports:
+      - "4445:4444"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - test-network
 
-  # Edge Node 
+  # Standalone Edge - accessible on port 4446
   edge:
-    image: selenium/node-edge:4.25.0
+    image: selenium/standalone-edge:4.27.0
     container_name: selenium-edge
-    depends_on:
-      - selenium-hub
     shm_size: 2gb
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=5
+    ports:
+      - "4446:4444"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - test-network
 
