--- a/pom.xml
+++ b/pom.xml
@@ -97,19 +97,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Selenium WebDriver for cross-browser testing -->
+        <!-- Selenium WebDriver for cross-browser testing (includes Selenium Manager) -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.16.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- WebDriverManager for automatic driver management -->
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>5.6.3</version>
+            <version>4.27.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -119,6 +111,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- Surefire: exclude cross-browser tests from normal test runs -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/browser/**</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
 
             <!-- Checkstyle Plugin for Code Style Analysis -->
